tests/snapshots/test_attribute__bool_lit.snap
---
created: "2019-04-06T05:46:03.255670528Z"
creator: insta@0.7.4
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        ident: Ident(
            foo,
        ),
        paren_token: Paren,
        nested: [
            Literal(
                Bool(
                    LitBool {
                        value: true,
                        span: Span,
                    },
                ),
            ),
        ],
    },
)
