tests/snapshots/test_attribute__meta_item_bool_value-2.snap
---
created: "2019-03-11T05:39:58.894781289Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        ident: Ident(
            foo
        ),
        eq_token: Eq,
        lit: Bool(
            LitBool {
                value: true,
                span: Span
            }
        )
    }
)
