tests/snapshots/test_attribute__meta_item_bool_value-3.snap
---
created: "2019-04-06T05:46:03.280598224Z"
creator: insta@0.7.4
source: tests/test_attribute.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        ident: Ident(
            foo,
        ),
        eq_token: Eq,
        lit: Bool(
            LitBool {
                value: false,
                span: Span,
            },
        ),
    },
)
