tests/snapshots/test_attribute__meta_item_bool_value-4.snap
---
created: "2019-03-11T05:40:02.824077655Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        ident: Ident(
            foo
        ),
        eq_token: Eq,
        lit: Bool(
            LitBool {
                value: false,
                span: Span
            }
        )
    }
)
