tests/snapshots/test_attribute__meta_item_list_bool_value.snap
---
created: "2019-03-11T05:39:56.764179861Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        ident: Ident(
            foo
        ),
        paren_token: Paren,
        nested: [
            Meta(
                NameValue(
                    MetaNameValue {
                        ident: Ident(
                            bar
                        ),
                        eq_token: Eq,
                        lit: Bool(
                            LitBool {
                                value: true,
                                span: Span
                            }
                        )
                    }
                )
            )
        ]
    }
)
