tests/snapshots/test_attribute__meta_item_list_bool_value_multiple_segments.snap
---
created: "2019-03-17T19:23:24.098501900Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        path: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        foo
                    ),
                    arguments: None
                }
            ]
        },
        paren_token: Paren,
        nested: [
            Meta(
                NameValue(
                    MetaNameValue {
                        path: Path {
                            leading_colon: None,
                            segments: [
                                PathSegment {
                                    ident: Ident(
                                        bar
                                    ),
                                    arguments: None
                                },
                                Colon2,
                                PathSegment {
                                    ident: Ident(
                                        baz
                                    ),
                                    arguments: None
                                }
                            ]
                        },
                        eq_token: Eq,
                        lit: Bool(
                            LitBool {
                                value: true,
                                span: Span
                            }
                        )
                    }
                )
            )
        ]
    }
)
