tests/snapshots/test_attribute__meta_item_list_lit-2.snap
---
created: "2019-03-17T19:23:24.099484Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        path: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        foo
                    ),
                    arguments: None
                }
            ]
        },
        paren_token: Paren,
        nested: [
            Literal(
                Int(
                    LitInt {
                        token: Literal {
                            lit: 5
                        }
                    }
                )
            )
        ]
    }
)
